before test in apple

--- a/src/App.css
+++ b/src/App.css
@@ -310,7 +310,7 @@ li {
 /*------------------------------------------------- MEDIA QUERIES start ----------------------------------------------------*/
 /*==========================================================================================================================*/
 /*==========================================================================================================================*/
-/* check in apple */
+/* before test in apple */
 
 /* anything under 320px width */
 @media only screen 
