carousel white buy height added

--- a/src/App.css
+++ b/src/App.css
@@ -59,6 +59,7 @@
   justify-content: flex-start;
   align-items: center;
   width: 670px;
+  height: 740px;
   transform: scale(0.6);
   margin-top: 80px;
   transform-origin: top center;
@@ -310,7 +311,8 @@ li {
 /*------------------------------------------------- MEDIA QUERIES start ----------------------------------------------------*/
 /*==========================================================================================================================*/
 /*==========================================================================================================================*/
-/* before test in apple */
+/* apple iPhones buy page is OK other pages the drawing is smaller than screen by a lot...*
+/* ipads are not OK */
 
 /* anything under 320px width */
 @media only screen 
@@ -350,6 +352,7 @@ li {
   /* ================================================= carousel white buy ================================================= */
   .carousel_white_buy {
     width: 340px;
+    height:370px;
     margin-top: 50px;
   }
   /* ================================================= carousel white buy ================================================= */
@@ -404,6 +407,7 @@ li {
   /* ================================================= carousel white buy ================================================= */
   .carousel_white_buy {
     width: 340px;
+    height: 370px;
     margin-top: 50px;
   }
   /* ================================================= carousel white buy ================================================= */
@@ -458,6 +462,7 @@ li {
   /* ================================================= carousel white buy ================================================= */
   .carousel_white_buy {
     width: 412px;
+    height: 450px;
     margin-top: 50px;
   }
   /* ================================================= carousel white buy ================================================= */
@@ -493,6 +498,7 @@ li {
 /* ================================================= carousel white buy ================================================= */
   .carousel_white_buy {
     width: 690px;
+    height: 752px;
     margin-top: 50px;
   }
 /* ================================================= carousel white buy ================================================= */
@@ -528,6 +534,7 @@ li {
 /* ================================================= carousel white buy ================================================= */
   .carousel_white_buy {
     width: 670px;
+    height: 740px;
     margin-top: 50px;
   }
 /* ================================================= carousel white buy ================================================= */
@@ -563,6 +570,7 @@ li {
 /* ================================================= carousel white buy ================================================= */  
   .carousel_white_buy {
     width: 670px;
+    height: 740px;
     margin-top: 50px;
   }
 /* ================================================= carousel white buy ================================================= */  
