--- a/src/App.css
+++ b/src/App.css
@@ -218,7 +218,7 @@ nav {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: 2px solid violet;
+  border: 2px solid green;
   z-index: 0;
 }
 
